avoid cropping

--- a/osrs-accounts/assets/custom_css/custom.css
+++ b/osrs-accounts/assets/custom_css/custom.css
@@ -1,9 +1,10 @@
 .product-card-image {
   display: block;
   height: 250px;
-  width: auto;   
-  object-fit: cover; 
+  width: auto;    
+  object-fit: contain;  
 }
+
 
 .banner-logo-image {
     width: 472px;
